# algol

./: README.md  pyproject.toml
.github/workflows/: build.yaml  release.yaml  test.yaml
tests/: common.py  test_init.py
