[tool.poetry]
name = "algol"
version = "0.1.0"
description = "A library for managing daemon proceses and background services."
authors = ["Zanie <contact@zanie.dev>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.7"

[tool.ruff.lint]
extend-select = ["I", "W292"]
preview = true
